Korjauksia navigoimiseen. Parannuksia tyyliin.

--- a/index.html
+++ b/index.html
@@ -98,25 +98,27 @@
             <span class="logo" style="--logo:url('./assets/logot/davin_logo.avif');"></span>
             <span class="tenant-name">Davin Parturi</span>
           </a>
-          <a class="tenant" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/"
-            target="_blank" rel="noopener" aria-label="Kotipizza" data-name="Kotipizza">
-            <span class="logo" style="--logo:url('./assets/logot/kotipizza_logo.avif');"></span>
-            <span class="tenant-name">Kotipizza</span>
+          <a class="tenant" href="https://www.kotipizza.fi/ravintolat/masku-maskuntie/" target="_blank" rel="noopener"
+            aria-label="Kotipizza" data-name="Riviera">
+            <span class="logo" style="--logo:url('./assets/logot/riviera_logo.avif');"></span>
+            <span class="tenant-name">Kahvilaravintola Riviera</span>
           </a>
           <a class="tenant" href="https://www.lunula.fi/" target="_blank" rel="noopener"
             aria-label="Kauneushoitola Lunula" data-name="Lunula">
             <span class="logo" style="--logo:url('./assets/logot/lunula_logo.avif');"></span>
             <span class="tenant-name">Kauneushoitola Lunula</span>
           </a>
+
           <a class="tenant" href="https://www.ahtinen.com/" target="_blank" rel="noopener"
             aria-label="Kiinteistö &amp; Notariaatti Ahtinen" data-name="Ahtinen">
             <span class="logo" style="--logo:url('./assets/logot/ahtinen_logo.avif');"></span>
             <span class="tenant-name">Kiinteistö &amp; Notariaatti Ahtinen</span>
           </a>
-          <a class="tenant" href="https://www.kotipizza.fi/ravintolat/masku-maskuntie/"
-            target="_blank" rel="noopener" aria-label="Kotipizza" data-name="Riviera">
-            <span class="logo" style="--logo:url('./assets/logot/riviera_logo.avif');"></span>
-            <span class="tenant-name">Kahvilaravintola Riviera</span>
+
+          <a class="tenant" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/"
+            target="_blank" rel="noopener" aria-label="Kotipizza" data-name="Kotipizza">
+            <span class="logo" style="--logo:url('./assets/logot/kotipizza_logo.avif');"></span>
+            <span class="tenant-name">Kotipizza</span>
           </a>
           <a class="tenant" href="https://www.masku.com/" target="_blank" rel="noopener" aria-label="Masku"
             data-name="Masku">
@@ -146,7 +148,7 @@
 
     <section id="meista" class="about container section section--inner has-media" aria-labelledby="meista-title">
       <div class="content">
-        <h2 id="meista-title">Maskun Kauppakeskus – juuret Varsinais-Suomessa</h2>
+        <h2 id="meista-title">Tietoa meistä</h2>
         <p>
           Maskun Kauppakeskus on osa varsinaissuomalaista arkea. Masku ei meille ole pelkkä piste kartalla, vaan
           yhteisö, jonka ihmiset, tarinat ja toiveet antavat keskukselle sen luonteen. Täällä paikallisuus, sujuva
