--- a/liikkeet-ja-palvelut.html
+++ b/liikkeet-ja-palvelut.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="fi">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Liikkeet ja palvelut – Maskun Kauppakeskus</title>
-  <meta name="description" content="Maskun Kauppakeskuksen liikkeet ja palvelut: Aito-kauppa, Davin Parturi, Kahvilaravintola Riviera, Kauneushoitola Lunula, Kiinteistö & Notariaatti Ahtinen, Kotipizza, Maskun Kalustetalo Humikkala, Mimosan kukka, Oma Säästöpankki ja Taksi Hietanen." />
+  <meta name="description"
+    content="Maskun Kauppakeskuksen liikkeet ja palvelut: Aito-kauppa, Davin Parturi, Kahvilaravintola Riviera, Kauneushoitola Lunula, Kiinteistö & Notariaatti Ahtinen, Kotipizza, Maskun Kalustetalo Humikkala, Mimosan kukka, Oma Säästöpankki ja Taksi Hietanen." />
   <link rel="canonical" href="https://www.esimerkki.fi/liikkeet-ja-palvelut.html" />
 
   <!-- Open Graph -->
@@ -146,10 +148,11 @@
 
   <link rel="stylesheet" href="./styles.css" />
 </head>
+
 <body>
   <header id="site-header" data-partial="./partials/header.html"></header>
 
-  <main class="container section section--inner">
+  <main class="liikkeet-ja-palvelut container section section--inner">
     <h1 data-text="Liikkeet ja palvelut">Liikkeet ja palvelut</h1>
 
 
@@ -158,22 +161,26 @@
       <!-- TENANTS:START -->
 
       <article id="aito-kauppa" class="tenant-card" itemscope itemtype="https://schema.org/LocalBusiness">
-        <a class="tenant-card__logo" href="https://aitokauppa.fi/pages/aito-kauppa-masku-maskun-luontaispuoti" target="_blank" rel="noopener" aria-label="Aito-kauppa Maskun Luontaispuoti" itemprop="url">
+        <a class="tenant-card__logo" href="https://aitokauppa.fi/pages/aito-kauppa-masku-maskun-luontaispuoti"
+          target="_blank" rel="noopener" aria-label="Aito-kauppa Maskun Luontaispuoti" itemprop="url">
           <span class="logo" style="--logo:url('./assets/logot/aitokauppa_logo.avif');" aria-hidden="true"></span>
         </a>
         <div class="tenant-card__body">
           <h2 class="tenant-card__title" itemprop="name">Aito-kauppa Maskun Luontaispuoti</h2>
           <p class="tenant-card__desc" itemprop="description">
-            Luontaistuotteita, ravintolisiä ja arjen hyvinvointia edistäviä tuotteita. Asiantuntevaa, ystävällistä palvelua ja vinkkejä parempaan oloon.
+            Luontaistuotteita, ravintolisiä ja arjen hyvinvointia edistäviä tuotteita. Asiantuntevaa, ystävällistä
+            palvelua ja vinkkejä parempaan oloon.
           </p>
           <p class="tenant-card__links">
-            <a class="tenant-link" href="https://aitokauppa.fi/pages/aito-kauppa-masku-maskun-luontaispuoti" target="_blank" rel="noopener">Verkkosivu &raquo;</a>
+            <a class="tenant-link" href="https://aitokauppa.fi/pages/aito-kauppa-masku-maskun-luontaispuoti"
+              target="_blank" rel="noopener">Verkkosivu &raquo;</a>
           </p>
         </div>
       </article>
 
       <article id="davin-parturi" class="tenant-card" itemscope itemtype="https://schema.org/HairSalon">
-        <a class="tenant-card__logo" href="https://www.facebook.com/people/Davin-Parturi/100094396887184/" target="_blank" rel="noopener" aria-label="Davin Parturi" itemprop="url">
+        <a class="tenant-card__logo" href="https://www.facebook.com/people/Davin-Parturi/100094396887184/"
+          target="_blank" rel="noopener" aria-label="Davin Parturi" itemprop="url">
           <span class="logo" style="--logo:url('./assets/logot/davin_logo.avif');" aria-hidden="true"></span>
         </a>
         <div class="tenant-card__body">
@@ -182,58 +189,15 @@
             Paikallinen parturi siisteihin leikkauksiin ja huoliteltuihin rajauksiin. Helppo asioida, rento tunnelma.
           </p>
           <p class="tenant-card__links">
-            <a class="tenant-link" href="https://www.facebook.com/people/Davin-Parturi/100094396887184/" target="_blank" rel="noopener">Facebook &raquo;</a>
-          </p>
-        </div>
-      </article>
-
-      <article id="kotipizza" class="tenant-card" itemscope itemtype="https://schema.org/Restaurant">
-        <a class="tenant-card__logo" href="https://www.kotipizza.fi/ravintolat/masku-maskuntie/" target="_blank" rel="noopener" aria-label="Kotipizza" itemprop="url">
-          <span class="logo" style="--logo:url('./assets/logot/kotipizza_logo.avif');" aria-hidden="true"></span>
-        </a>
-        <div class="tenant-card__body">
-          <h2 class="tenant-card__title" itemprop="name">Kotipizza</h2>
-          <p class="tenant-card__desc" itemprop="description">
-            Suosikkipizzat nopeasti mukaan tai paikan päällä nautittavaksi. Valikoimassa myös kasvis- ja vegaanivaihtoehtoja.
-          </p>
-          <p class="tenant-card__links">
-            <a class="tenant-link" href="https://www.kotipizza.fi/ravintolat/masku-maskuntie/" target="_blank" rel="noopener">Sijainti &amp; tilaus &raquo;</a>
-          </p>
-        </div>
-      </article>
-
-      <article id="lunula" class="tenant-card" itemscope itemtype="https://schema.org/BeautySalon">
-        <a class="tenant-card__logo" href="https://www.lunula.fi/" target="_blank" rel="noopener" aria-label="Kauneushoitola Lunula" itemprop="url">
-          <span class="logo" style="--logo:url('./assets/logot/lunula_logo.avif');" aria-hidden="true"></span>
-        </a>
-        <div class="tenant-card__body">
-          <h2 class="tenant-card__title" itemprop="name">Kauneushoitola Lunula</h2>
-          <p class="tenant-card__desc" itemprop="description">
-            Hemmottelevia kasvo- ja vartalohoitoja, käsi- ja jalkahoitoja sekä ripset, kulmat ja sokeroinnit – hyvää oloa arkeen.
-          </p>
-          <p class="tenant-card__links">
-            <a class="tenant-link" href="https://www.lunula.fi/" target="_blank" rel="noopener">Verkkosivu &raquo;</a>
-          </p>
-        </div>
-      </article>
-
-      <article id="ahtinen" class="tenant-card" itemscope itemtype="https://schema.org/ProfessionalService">
-        <a class="tenant-card__logo" href="https://www.ahtinen.com/" target="_blank" rel="noopener" aria-label="Kiinteistö & Notariaatti Ahtinen" itemprop="url">
-          <span class="logo" style="--logo:url('./assets/logot/ahtinen_logo.avif');" aria-hidden="true"></span>
-        </a>
-        <div class="tenant-card__body">
-          <h2 class="tenant-card__title" itemprop="name">Kiinteistö &amp; Notariaatti Ahtinen</h2>
-          <p class="tenant-card__desc" itemprop="description">
-            Kiinteistönvälitystä ja notariaattipalveluja luotettavasti. Apua asuntokauppoihin, arviolausuntoihin ja sopimusasioihin.
-          </p>
-          <p class="tenant-card__links">
-            <a class="tenant-link" href="https://www.ahtinen.com/" target="_blank" rel="noopener">Verkkosivu &raquo;</a>
+            <a class="tenant-link" href="https://www.facebook.com/people/Davin-Parturi/100094396887184/" target="_blank"
+              rel="noopener">Facebook &raquo;</a>
           </p>
         </div>
       </article>
 
       <article id="riviera" class="tenant-card" itemscope itemtype="https://schema.org/CafeOrCoffeeShop">
-        <a class="tenant-card__logo" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/" target="_blank" rel="noopener" aria-label="Kahvilaravintola Riviera" itemprop="url">
+        <a class="tenant-card__logo" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/"
+          target="_blank" rel="noopener" aria-label="Kahvilaravintola Riviera" itemprop="url">
           <span class="logo" style="--logo:url('./assets/logot/riviera_logo.avif');" aria-hidden="true"></span>
         </a>
         <div class="tenant-card__body">
@@ -242,13 +206,67 @@
             Kahvia, pientä purtavaa ja lounasherkkuja päivän piristykseksi. Mukava kohtaamispaikka ostosten lomassa.
           </p>
           <p class="tenant-card__links">
-            <a class="tenant-link" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/" target="_blank" rel="noopener">Facebook &raquo;</a>
+            <a class="tenant-link" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/"
+              target="_blank" rel="noopener">Facebook &raquo;</a>
+          </p>
+        </div>
+      </article>
+      <article id="lunula" class="tenant-card" itemscope itemtype="https://schema.org/BeautySalon">
+        <a class="tenant-card__logo" href="https://www.lunula.fi/" target="_blank" rel="noopener"
+          aria-label="Kauneushoitola Lunula" itemprop="url">
+          <span class="logo" style="--logo:url('./assets/logot/lunula_logo.avif');" aria-hidden="true"></span>
+        </a>
+        <div class="tenant-card__body">
+          <h2 class="tenant-card__title" itemprop="name">Kauneushoitola Lunula</h2>
+          <p class="tenant-card__desc" itemprop="description">
+            Hemmottelevia kasvo- ja vartalohoitoja, käsi- ja jalkahoitoja sekä ripset, kulmat ja sokeroinnit – hyvää
+            oloa arkeen.
+          </p>
+          <p class="tenant-card__links">
+            <a class="tenant-link" href="https://www.lunula.fi/" target="_blank" rel="noopener">Verkkosivu &raquo;</a>
           </p>
         </div>
       </article>
 
+      <article id="ahtinen" class="tenant-card" itemscope itemtype="https://schema.org/ProfessionalService">
+        <a class="tenant-card__logo" href="https://www.ahtinen.com/" target="_blank" rel="noopener"
+          aria-label="Kiinteistö & Notariaatti Ahtinen" itemprop="url">
+          <span class="logo" style="--logo:url('./assets/logot/ahtinen_logo.avif');" aria-hidden="true"></span>
+        </a>
+        <div class="tenant-card__body">
+          <h2 class="tenant-card__title" itemprop="name">Kiinteistö &amp; Notariaatti Ahtinen</h2>
+          <p class="tenant-card__desc" itemprop="description">
+            Kiinteistönvälitystä ja notariaattipalveluja luotettavasti. Apua asuntokauppoihin, arviolausuntoihin ja
+            sopimusasioihin.
+          </p>
+          <p class="tenant-card__links">
+            <a class="tenant-link" href="https://www.ahtinen.com/" target="_blank" rel="noopener">Verkkosivu &raquo;</a>
+          </p>
+        </div>
+      </article>
+
+      <article id="kotipizza" class="tenant-card" itemscope itemtype="https://schema.org/Restaurant">
+        <a class="tenant-card__logo" href="https://www.kotipizza.fi/ravintolat/masku-maskuntie/" target="_blank"
+          rel="noopener" aria-label="Kotipizza" itemprop="url">
+          <span class="logo" style="--logo:url('./assets/logot/kotipizza_logo.avif');" aria-hidden="true"></span>
+        </a>
+        <div class="tenant-card__body">
+          <h2 class="tenant-card__title" itemprop="name">Kotipizza</h2>
+          <p class="tenant-card__desc" itemprop="description">
+            Suosikkipizzat nopeasti mukaan tai paikan päällä nautittavaksi. Valikoimassa myös kasvis- ja
+            vegaanivaihtoehtoja.
+          </p>
+          <p class="tenant-card__links">
+            <a class="tenant-link" href="https://www.kotipizza.fi/ravintolat/masku-maskuntie/" target="_blank"
+              rel="noopener">Sijainti &amp; tilaus &raquo;</a>
+          </p>
+        </div>
+      </article>
+
+
       <article id="masku" class="tenant-card" itemscope itemtype="https://schema.org/FurnitureStore">
-        <a class="tenant-card__logo" href="https://www.masku.com/" target="_blank" rel="noopener" aria-label="Maskun Kalustetalo Humikkala" itemprop="url">
+        <a class="tenant-card__logo" href="https://www.masku.com/" target="_blank" rel="noopener"
+          aria-label="Maskun Kalustetalo Humikkala" itemprop="url">
           <span class="logo" style="--logo:url('./assets/logot/masku_logo.avif');" aria-hidden="true"></span>
         </a>
         <div class="tenant-card__body">
@@ -263,7 +281,8 @@
       </article>
 
       <article id="mimosan-kukka" class="tenant-card" itemscope itemtype="https://schema.org/Florist">
-        <a class="tenant-card__logo" href="https://www.mimosankukka.fi/" target="_blank" rel="noopener" aria-label="Mimosan kukka" itemprop="url">
+        <a class="tenant-card__logo" href="https://www.mimosankukka.fi/" target="_blank" rel="noopener"
+          aria-label="Mimosan kukka" itemprop="url">
           <span class="logo" style="--logo:url('./assets/logot/mimosan_logo.avif');" aria-hidden="true"></span>
         </a>
         <div class="tenant-card__body">
@@ -272,28 +291,33 @@
             Sidontaa arkeen ja juhlaan: kimput, asetelmat ja tilakoristukset. Myös viherkasveja ja tarvikkeita.
           </p>
           <p class="tenant-card__links">
-            <a class="tenant-link" href="https://www.mimosankukka.fi/" target="_blank" rel="noopener">Verkkosivu &raquo;</a>
+            <a class="tenant-link" href="https://www.mimosankukka.fi/" target="_blank" rel="noopener">Verkkosivu
+              &raquo;</a>
           </p>
         </div>
       </article>
 
       <article id="omasp" class="tenant-card" itemscope itemtype="https://schema.org/BankOrCreditUnion">
-        <a class="tenant-card__logo" href="https://www.omasp.fi/konttorit/masku" target="_blank" rel="noopener" aria-label="Oma Säästöpankki Masku" itemprop="url">
+        <a class="tenant-card__logo" href="https://www.omasp.fi/konttorit/masku" target="_blank" rel="noopener"
+          aria-label="Oma Säästöpankki Masku" itemprop="url">
           <span class="logo" style="--logo:url('./assets/logot/omasp_logo.avif');" aria-hidden="true"></span>
         </a>
         <div class="tenant-card__body">
           <h2 class="tenant-card__title" itemprop="name">Oma Säästöpankki</h2>
           <p class="tenant-card__desc" itemprop="description">
-            Henkilökohtaista pankkipalvelua säästämiseen, lainoihin ja päivittäiseen asiointiin. Helppo ajanvaraus verkossa.
+            Henkilökohtaista pankkipalvelua säästämiseen, lainoihin ja päivittäiseen asiointiin. Helppo ajanvaraus
+            verkossa.
           </p>
           <p class="tenant-card__links">
-            <a class="tenant-link" href="https://www.omasp.fi/konttorit/masku" target="_blank" rel="noopener">Konttoritiedot &raquo;</a>
+            <a class="tenant-link" href="https://www.omasp.fi/konttorit/masku" target="_blank"
+              rel="noopener">Konttoritiedot &raquo;</a>
           </p>
         </div>
       </article>
 
       <article id="taksi-hietanen" class="tenant-card" itemscope itemtype="https://schema.org/TaxiService">
-        <a class="tenant-card__logo" href="https://www.taksihietanen.fi/" target="_blank" rel="noopener" aria-label="Taksi Hietanen" itemprop="url">
+        <a class="tenant-card__logo" href="https://www.taksihietanen.fi/" target="_blank" rel="noopener"
+          aria-label="Taksi Hietanen" itemprop="url">
           <span class="logo" style="--logo:url('./assets/logot/taksihietanen_logo.avif');" aria-hidden="true"></span>
         </a>
         <div class="tenant-card__body">
@@ -302,7 +326,8 @@
             Luotettavat kyydit arkeen ja juhlaan. Tilaukset kätevästi verkosta tai puhelimitse, myös ennakkotilaukset.
           </p>
           <p class="tenant-card__links">
-            <a class="tenant-link" href="https://www.taksihietanen.fi/" target="_blank" rel="noopener">Verkkosivu &raquo;</a>
+            <a class="tenant-link" href="https://www.taksihietanen.fi/" target="_blank" rel="noopener">Verkkosivu
+              &raquo;</a>
           </p>
         </div>
       </article>
@@ -319,4 +344,5 @@
 
   <script src="./app.js" defer></script>
 </body>
+
 </html>
