--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <span class="logo" style="--logo:url('./assets/logot/davin_logo.avif');"></span>
             <span class="tenant-name">Davin Parturi</span>
           </a>
-          <a class="tenant" href="https://www.kotipizza.fi/ravintolat/masku-maskuntie/" target="_blank" rel="noopener"
+          <a class="tenant" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/" target="_blank" rel="noopener"
             aria-label="Kotipizza" data-name="Riviera">
             <span class="logo" style="--logo:url('./assets/logot/riviera_logo.avif');"></span>
             <span class="tenant-name">Kahvilaravintola Riviera</span>
@@ -114,7 +114,7 @@
             <span class="tenant-name">Kiinteistö &amp; Notariaatti Ahtinen</span>
           </a>
 
-          <a class="tenant" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/"
+          <a class="tenant" href="https://www.kotipizza.fi/ravintolat/masku-maskuntie/"
             target="_blank" rel="noopener" aria-label="Kotipizza" data-name="Kotipizza">
             <span class="logo" style="--logo:url('./assets/logot/kotipizza_logo.avif');"></span>
             <span class="tenant-name">Kotipizza</span>
@@ -130,9 +130,9 @@
             <span class="tenant-name">Mimosan kukka</span>
           </a>
           <a class="tenant" href="https://www.omasp.fi/konttorit/masku" target="_blank" rel="noopener"
-            aria-label="Oma Säästöpankki Masku" data-name="Oma Säästöpankki">
+            aria-label="OmaSp Masku" data-name="OmaSp">
             <span class="logo" style="--logo:url('./assets/logot/omasp_logo.avif');"></span>
-            <span class="tenant-name">Oma Säästöpankki</span>
+            <span class="tenant-name">OmaSp</span>
           </a>
           <a class="tenant" href="https://www.taksihietanen.fi/" target="_blank" rel="noopener"
             aria-label="Taksi Hietanen" data-name="Taksi Hietanen">
