--- a/liikkeet-ja-palvelut.html
+++ b/liikkeet-ja-palvelut.html
@@ -7,7 +7,7 @@
 
   <title>Liikkeet ja palvelut – Maskun Kauppakeskus</title>
   <meta name="description"
-    content="Maskun Kauppakeskuksen liikkeet ja palvelut: Aito-kauppa, Davin Parturi, Kahvilaravintola Riviera, Kauneushoitola Lunula, Kiinteistö & Notariaatti Ahtinen, Kotipizza, Maskun Kalustetalo Humikkala, Mimosan kukka, Oma Säästöpankki ja Taksi Hietanen." />
+    content="Maskun Kauppakeskuksen liikkeet ja palvelut: Aito-kauppa, Davin Parturi, Kahvilaravintola Riviera, Kauneushoitola Lunula, Kiinteistö & Notariaatti Ahtinen, Kotipizza, Maskun Kalustetalo Humikkala, Mimosan kukka, OmaSp ja Taksi Hietanen." />
   <link rel="canonical" href="https://www.esimerkki.fi/liikkeet-ja-palvelut.html" />
 
   <!-- Open Graph -->
@@ -125,7 +125,7 @@
             "position": 9,
             "item": {
               "@type": "BankOrCreditUnion",
-              "name": "Oma Säästöpankki",
+              "name": "OmaSp",
               "url": "https://www.omasp.fi/konttorit/masku",
               "image": "https://www.esimerkki.fi/assets/logot/omasp_logo.avif"
             }
@@ -299,11 +299,11 @@
 
       <article id="omasp" class="tenant-card" itemscope itemtype="https://schema.org/BankOrCreditUnion">
         <a class="tenant-card__logo" href="https://www.omasp.fi/konttorit/masku" target="_blank" rel="noopener"
-          aria-label="Oma Säästöpankki Masku" itemprop="url">
+          aria-label="OmaSp Masku" itemprop="url">
           <span class="logo" style="--logo:url('./assets/logot/omasp_logo.avif');" aria-hidden="true"></span>
         </a>
         <div class="tenant-card__body">
-          <h2 class="tenant-card__title" itemprop="name">Oma Säästöpankki</h2>
+          <h2 class="tenant-card__title" itemprop="name">OmaSp Masku</h2>
           <p class="tenant-card__desc" itemprop="description">
             Henkilökohtaista pankkipalvelua säästämiseen, lainoihin ja päivittäiseen asiointiin. Helppo ajanvaraus
             verkossa.
