Parannettu sivun latautumista. Jaoteltu JS erillisiin moduuleihin.

--- a/info-pysakointi.html
+++ b/info-pysakointi.html
@@ -37,6 +37,15 @@
 <footer id="site-footer" data-partial="./partials/footer.html"></footer>
 
 
-<script src="./app.js" defer></script>
+  <script src="./js/core/pjax.js"></script>
+  <script src="./js/ui/hamburger.js"></script>
+  <script src="./js/ui/hamburger-outside-close.js"></script>
+  <script src="./js/ui/header-hide-on-scroll.js"></script>
+  <script src="./js/effects/background.js"></script>
+  <script src="./js/ui/lock-bg-scale-fallback.js"></script>
+  <script src="./js/widgets/banner-carousel.js"></script>
+  <script src="./js/widgets/opening-hours.js"></script>
+  <script src="./js/widgets/back-to-top.js"></script>
+  <script src="./js/widgets/about-lightbox.js"></script>
 </body>
 </html>
