--- a/liikkeet-ja-palvelut.html
+++ b/liikkeet-ja-palvelut.html
@@ -8,20 +8,31 @@
   <title>Liikkeet ja palvelut – Maskun Kauppakeskus</title>
   <meta name="description"
     content="Maskun Kauppakeskuksen liikkeet ja palvelut: Aito-kauppa, Davin Parturi, Kahvilaravintola Riviera, Kauneushoitola Lunula, Kiinteistö & Notariaatti Ahtinen, Kotipizza, Maskun Kalustetalo Humikkala, Mimosan kukka, OmaSp ja Taksi Hietanen." />
-  <link rel="canonical" href="https://www.esimerkki.fi/liikkeet-ja-palvelut.html" />
+  <link rel="canonical" href="https://www.maskunkauppakeskus.fi/liikkeet-ja-palvelut.html" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Liikkeet ja palvelut – Maskun Kauppakeskus" />
   <meta property="og:description" content="Tutustu kaikkiin liikkeisiin ja palveluihin yhdellä sivulla." />
-  <meta property="og:url" content="https://www.esimerkki.fi/liikkeet-ja-palvelut.html" />
-  <meta property="og:image" content="https://www.esimerkki.fi/assets/share-liikkeet.avif" />
+  <meta property="og:url" content="https://www.maskunkauppakeskus.fi/liikkeet-ja-palvelut.html" />
+  <meta property="og:image" content="https://www.maskunkauppakeskus.fi/assets/share-liikkeet.avif" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Liikkeet ja palvelut – Maskun Kauppakeskus" />
   <meta name="twitter:description" content="Tutustu kaikkiin liikkeisiin ja palveluihin yhdellä sivulla." />
-  <meta name="twitter:image" content="https://www.esimerkki.fi/assets/share-liikkeet.avif" />
+  <meta name="twitter:image" content="https://www.maskunkauppakeskus.fi/assets/share-liikkeet.avif" />
+<!-- Preload: tenant-logot (AVIF) -->
+<link rel="preload" as="image" href="./assets/logot/aitokauppa_logo.avif"  type="image/avif">
+<link rel="preload" as="image" href="./assets/logot/davin_logo.avif"       type="image/avif">
+<link rel="preload" as="image" href="./assets/logot/riviera_logo.avif"     type="image/avif">
+<link rel="preload" as="image" href="./assets/logot/lunula_logo.avif"      type="image/avif">
+<link rel="preload" as="image" href="./assets/logot/ahtinen_logo.avif"     type="image/avif">
+<link rel="preload" as="image" href="./assets/logot/kotipizza_logo.avif"   type="image/avif">
+<link rel="preload" as="image" href="./assets/logot/masku_logo.avif"       type="image/avif">
+<link rel="preload" as="image" href="./assets/logot/mimosan_logo.avif"     type="image/avif">
+<link rel="preload" as="image" href="./assets/logot/omasp_logo.avif"       type="image/avif">
+<link rel="preload" as="image" href="./assets/logot/taksihietanen_logo.avif" type="image/avif">
 
   <!-- Schema.org JSON-LD: sivu + lista liikkeistä -->
   <script type="application/ld+json">
@@ -31,7 +42,7 @@
       {
         "@type": "WebPage",
         "name": "Liikkeet ja palvelut – Maskun Kauppakeskus",
-        "url": "https://www.esimerkki.fi/liikkeet-ja-palvelut.html",
+        "url": "https://www.maskunkauppakeskus.fi/liikkeet-ja-palvelut.html",
         "description": "Maskun Kauppakeskuksen liikkeet ja palvelut."
       },
       {
@@ -45,7 +56,7 @@
               "@type": "LocalBusiness",
               "name": "Aito-kauppa Maskun Luontaispuoti",
               "url": "https://aitokauppa.fi/pages/aito-kauppa-masku-maskun-luontaispuoti",
-              "image": "https://www.esimerkki.fi/assets/logot/aitokauppa_logo.avif",
+              "image": "https://www.maskunkauppakeskus.fi/assets/logot/aitokauppa_logo.avif",
               "sameAs": ["https://aitokauppa.fi/"]
             }
           },
@@ -56,7 +67,7 @@
               "@type": "HairSalon",
               "name": "Davin Parturi",
               "url": "https://www.facebook.com/people/Davin-Parturi/100094396887184/",
-              "image": "https://www.esimerkki.fi/assets/logot/davin_logo.avif"
+              "image": "https://www.maskunkauppakeskus.fi/assets/logot/davin_logo.avif"
             }
           },
           {
@@ -66,7 +77,7 @@
               "@type": "CafeOrCoffeeShop",
               "name": "Kahvilaravintola Riviera",
               "url": "https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/",
-              "image": "https://www.esimerkki.fi/assets/logot/riviera_logo.avif"
+              "image": "https://www.maskunkauppakeskus.fi/assets/logot/riviera_logo.avif"
             }
           },
           {
@@ -76,7 +87,7 @@
               "@type": "BeautySalon",
               "name": "Kauneushoitola Lunula",
               "url": "https://www.lunula.fi/",
-              "image": "https://www.esimerkki.fi/assets/logot/lunula_logo.avif"
+              "image": "https://www.maskunkauppakeskus.fi/assets/logot/lunula_logo.avif"
             }
           },
           {
@@ -86,7 +97,7 @@
               "@type": "ProfessionalService",
               "name": "Kiinteistö & Notariaatti Ahtinen",
               "url": "https://www.ahtinen.com/",
-              "image": "https://www.esimerkki.fi/assets/logot/ahtinen_logo.avif"
+              "image": "https://www.maskunkauppakeskus.fi/assets/logot/ahtinen_logo.avif"
             }
           },
           {
@@ -96,7 +107,7 @@
               "@type": "Restaurant",
               "name": "Kotipizza",
               "url": "https://www.kotipizza.fi/ravintolat/masku-maskuntie/",
-              "image": "https://www.esimerkki.fi/assets/logot/kotipizza_logo.avif",
+              "image": "https://www.maskunkauppakeskus.fi/assets/logot/kotipizza_logo.avif",
               "sameAs": ["https://www.kotipizza.fi/"]
             }
           },
@@ -107,7 +118,7 @@
               "@type": "FurnitureStore",
               "name": "Maskun Kalustetalo Humikkala",
               "url": "https://www.masku.com/",
-              "image": "https://www.esimerkki.fi/assets/logot/masku_logo.avif"
+              "image": "https://www.maskunkauppakeskus.fi/assets/logot/masku_logo.avif"
             }
           },
           {
@@ -117,7 +128,7 @@
               "@type": "Florist",
               "name": "Mimosan kukka",
               "url": "https://www.mimosankukka.fi/",
-              "image": "https://www.esimerkki.fi/assets/logot/mimosan_logo.avif"
+              "image": "https://www.maskunkauppakeskus.fi/assets/logot/mimosan_logo.avif"
             }
           },
           {
@@ -127,7 +138,7 @@
               "@type": "BankOrCreditUnion",
               "name": "OmaSp",
               "url": "https://www.omasp.fi/konttorit/masku",
-              "image": "https://www.esimerkki.fi/assets/logot/omasp_logo.avif"
+              "image": "https://www.maskunkauppakeskus.fi/assets/logot/omasp_logo.avif"
             }
           },
           {
@@ -137,7 +148,7 @@
               "@type": "TaxiService",
               "name": "Taksi Hietanen",
               "url": "https://www.taksihietanen.fi/",
-              "image": "https://www.esimerkki.fi/assets/logot/taksihietanen_logo.avif"
+              "image": "https://www.maskunkauppakeskus.fi/assets/logot/taksihietanen_logo.avif"
             }
           }
         ]
@@ -342,7 +353,19 @@
 
   <footer id="site-footer" data-partial="./partials/footer.html"></footer>
 
-  <script src="./app.js" defer></script>
+  <script src="./js/core/pjax.js"></script>
+  <script src="./js/ui/hamburger.js"></script>
+  <script src="./js/ui/hamburger-outside-close.js"></script>
+  <script src="./js/ui/header-hide-on-scroll.js"></script>
+  <script src="./js/effects/background.js"></script>
+  <script src="./js/ui/lock-bg-scale-fallback.js"></script>
+  <script src="./js/widgets/banner-carousel.js"></script>
+  <script src="./js/widgets/opening-hours.js"></script>
+  <script src="./js/widgets/back-to-top.js"></script>
+  <script src="./js/widgets/about-lightbox.js"></script>
+  <script defer src="/js/core/image-ready.js"></script>
+  <script defer src="/js/core/boot-loading-overlay.js"></script>
+  <script defer src="/js/ui/pjax-soft-ready.js"></script>
 </body>
 
 </html>
