--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 
   <link rel="preload" as="image" href="./assets/bg1.avif" fetchpriority="high">
   <link rel="preload" as="image" href="./assets/logo.avif" fetchpriority="high">
-
+<link rel="preload" as="image" href="./assets/banner_1.avif" type="image/avif" fetchpriority="high" imagesizes="100vw">
   <link rel="stylesheet" href="./styles.css" />
+
 </head>
 
 <body>
@@ -68,20 +69,32 @@
         </div>
 
         <nav class="quick-nav" aria-label="Pikavalikko">
-          <a class="btn" href="#tenants">Liikkeet & palvelut</a>
+          <a class="btn" href="#liikkeet-ja-palvelut">Liikkeet & palvelut</a>
           <a class="btn" href="https://lounaat.info/lounas/kahvilaravintola-riviera/masku"
-            target="_blank">Lounaslista</a> <a class="btn" href="#meista">Tietoa meistä</a>
+            target="_blank">Lounaslista</a> <a class="btn" href="#tietoja-meista">Tietoa meistä</a>
           <a class="btn" href="#sijainti">Sijainti & saapuminen</a>
         </nav>
 
       </div>
-      <div class="carousel" id="carousel">
-        <!-- JavaScript lisää tähän .track ja .slide -elementit -->
-      </div>
+<div class="carousel" id="carousel">
+  <div class="track" style="display:flex; transition:transform 0.6s ease; will-change:transform;">
+    <a class="slide" href="#" style="flex:0 0 100%">
+      <img
+        src="/assets/banner_1.avif"
+        alt="Banneri 1"
+        loading="eager"
+        fetchpriority="high"
+        decoding="async"
+        style="width:100%; display:block;"
+      >
+    </a>
+  </div>
+</div>
+
 
     </section>
 
-    <section class="tenants container">
+    <section id="liikkeet-ja-palvelut" class="tenants container">
       <div class="content">
         <h2>Liikkeet ja palvelut</h2>
         <div class="logo-grid" id="">
@@ -145,7 +158,7 @@
       </div>
     </section>
 
-    <section id="meista" class="about container section section--inner has-media" aria-labelledby="meista-title">
+    <section id="tietoja-meista" class="about container section section--inner has-media" aria-labelledby="meista-title">
       <div class="content">
         <h2 id="meista-title">Tietoa meistä</h2>
         <p>
@@ -330,9 +343,21 @@
   }
   </script>
 
-  <noscript>Parhaan käyttökokemuksen saat, kun JavaScript on käytössä.</noscript>
+  <noscript>Saat parhaan käyttökokemuksen, kun JavaScript on käytössä.</noscript>
 
-  <script src="./app.js" defer></script>
+  <script src="./js/core/pjax.js"></script>
+  <script src="./js/ui/hamburger.js"></script>
+  <script src="./js/ui/hamburger-outside-close.js"></script>
+  <script src="./js/ui/header-hide-on-scroll.js"></script>
+  <script src="./js/effects/background.js"></script>
+  <script src="./js/ui/lock-bg-scale-fallback.js"></script>
+  <script src="./js/widgets/banner-carousel.js"></script>
+  <script src="./js/widgets/opening-hours.js"></script>
+  <script src="./js/widgets/back-to-top.js"></script>
+  <script src="./js/widgets/about-lightbox.js"></script>
+  <script defer src="/js/core/image-ready.js"></script>
+  <script defer src="/js/core/boot-loading-overlay.js"></script>
+  <script defer src="/js/ui/pjax-soft-ready.js"></script>
 </body>
 
 </html>
